<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerPanel"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/lblWelcomeCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="103dp"
        android:text="@string/WelcomeBanner"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCart"
        android:layout_centerHorizontal="true"
        android:text="@string/Purchase" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTransaction"
        android:layout_centerHorizontal="true"
        android:text="@string/Cart" />

    <Button
        android:id="@+id/btnTransaction"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnProfile"
        android:layout_centerHorizontal="true"
        android:text="@string/ViewTransactions" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:text="@string/ViewProfile" />

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/Signout" />

</RelativeLayout>
