<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerProfile">

    <EditText
        android:id="@+id/txtFname"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtMobile"
        app:layout_constraintEnd_toStartOf="@+id/txtLname"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUserInfo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="128dp"
        android:layout_height="163dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ChangeProfileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_user_image" />

    <Button
        android:id="@+id/btnChangeProfileImage"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/ChangeProfileImage"
        app:layout_constraintBottom_toTopOf="@+id/lblUserInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/imgProfile" />

    <EditText
        android:id="@+id/txtLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUserInfo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeProfileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/imgProfile" />

    <EditText
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblUserInfo"
        android:layout_width="168dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/Information"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword|textVisiblePassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toStartOf="@+id/txtConfirmPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/SaveChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLname" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/CancelChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass" />
</android.support.constraint.ConstraintLayout>