<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".CustomerViewCart">

    <Button
        android:id="@+id/btnCheckout"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/Checkout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProducts"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCheckout"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblPrice"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="196dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ProductPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblProductName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/ProductName"
        app:layout_constraintBottom_toTopOf="@+id/lblDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgProduct" />

    <ListView
        android:id="@+id/ProductView"
        android:layout_width="346dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:layout_marginEnd="128dp"
        android:text="@string/ProductDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="106dp"
        android:layout_height="125dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ProductImage"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toStartOf="@+id/lblDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProductView"
        app:layout_constraintVertical_bias="0.455"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/lblGrandtotal"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="8dp"
        android:text="@string/GrandTotal"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:text="@string/Subtotal"
        app:layout_constraintBottom_toTopOf="@+id/lblGrandtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toBottomOf="@+id/ProductView" />
</android.support.constraint.ConstraintLayout>
