<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddProducts">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtPrice"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ProductName"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignEnd="@+id/spinCategory"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/ProductPrice"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toStartOf="@+id/btnChooseFile"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinCategory"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtName"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="352dp"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/txtPrice"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/ProductDescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/imgItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/SaveChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgbarImage" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSave"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/CancelChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prgbarImage" />

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtPrice"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ChooseFile"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="173dp"
        android:layout_height="172dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/ProductImage"
        app:layout_constraintBottom_toTopOf="@+id/prgbarImage"
        app:layout_constraintEnd_toStartOf="@+id/spinStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Spinner
        android:id="@+id/spinStatus"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/prgbarImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <ProgressBar
        android:id="@+id/prgbarImage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblCategory"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ProductCategory"
        app:layout_constraintBottom_toTopOf="@+id/spinCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progbarProduct"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lblCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>